creator add change mistakes in numbers delete testpics

--- a/dokumentumok.html
+++ b/dokumentumok.html
@@ -693,9 +693,9 @@
                     </div>
                     <div class="document-item">
                         <span class="document-icon">📚</span>
-                        <h4>Oktatási Program</h4>
-                        <p>Tanterv és tanulási célkitűzések</p>
-                        <a href="#" class="btn">PDF Letöltés</a>
+                        <h4>Típusnyomtatvány hiányzás igazolására</h4>
+                        <p>Hiányzás</p>
+                        <a href="dokumentum/Típusnyomtatvány hiányzások igazolására.docx" class="btn">PDF Letöltés</a>
                     </div>
                      
                 </div>
@@ -799,10 +799,10 @@
                 </div>
                 <div class="footer-section">
                     <h4>Közösségünk</h4>
-                    <p>40 boldog gyermek, 8 elkötelezett pedagógus, részt vevő családok és egy egyesített közösség az oktatásért.</p>
+                    <p>43 boldog gyermek, 8 elkötelezett pedagógus, részt vevő családok és egy egyesített közösség az oktatásért.</p>
                 </div>
             </div>
-            <p>&copy; 2025 Iskolánk. Minden jog fenntartva. | Szeretettel tervezve gyermekeinknek.</p>
+            <p>&copy; 2025 Iskolánk. Minden jog fenntartva. | Szeretettel tervezve gyermekeinknek. <strong>Kovács Koppány</strong></p>
         </div>
     </footer>
 
