--- a/osztalyok.html
+++ b/osztalyok.html
@@ -608,10 +608,10 @@
                 </div>
                 <div class="footer-section">
                     <h4>Közösségünk</h4>
-                    <p>40 boldog gyermek, 8 elkötelezett pedagógus, részt vevő családok és egy egyesített közösség az oktatásért.</p>
+                    <p>43 boldog gyermek, 8 elkötelezett pedagógus, részt vevő családok és egy egyesített közösség az oktatásért.</p>
                 </div>
             </div>
-            <p>&copy; 2025 Iskolánk. Minden jog fenntartva. | Szeretettel tervezve gyermekeinknek.</p>
+            <p>&copy; 2025 Iskolánk. Minden jog fenntartva. | Szeretettel tervezve gyermekeinknek. <strong>Kovács Koppány</strong></p>
         </div>
     </footer>
 
