--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
                     </div>
                     <div class="info-card">
                         <h3>👩‍🏫 4+4 Pedagógus</h3>
-                        <p><strong>• Rancz Ildikó </strong></p>
-                        <p><strong>• Kiss Tünde-Ibolya </strong></p>
-                        <p><strong>• Nagy Adél</strong></p>
-                        <p><strong>• Kovács Ilona-Éva </strong></p>
+                        <p><strong>• Rancz Ildikó </strong><br> Óvónő</p>
+                        <p><strong>• Kiss Tünde-Ibolya </strong><br> Tanítónő</p>
+                        <p><strong>• Nagy Adél</strong><br> Tanítónő</p>
+                        <p><strong>• Kovács Ilona-Éva </strong><br> Tanítónő</p>
                         <p><strong>• Bardocz Szilárd-Zsolt </strong><br> Testnevelés szakos tanár</p>
                         <p><strong>• Hadnagy Béla </strong><br> Angol nyelv szakos tanár</p>
                         <p><strong>• Micle-Csog Karola-Éva </strong><br> Vallás szakos tanár</p>
@@ -279,7 +279,7 @@
                     <p>43 boldog gyermek, 8 elkötelezett pedagógus, részt vevő családok és egy egyesített közösség az oktatásért.</p>
                 </div>
             </div>
-            <p>&copy; 2025 Iskolánk. Minden jog fenntartva. | Szeretettel tervezve gyermekeinknek.</p>
+            <p>&copy; 2025 Iskolánk. Minden jog fenntartva. | Szeretettel tervezve gyermekeinknek. <strong>Kovács Koppány</strong></p>
         </div>
     </footer>
 
